--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -110,7 +110,7 @@
                         <input type="text" id="email" name="email" required>
                         <label for="message">Message: </label>
                         <textarea name="message" id="message"></textarea>
-                        <button type="button">Submit</button>
+                        <button type="button">Envoyer</button>
 
                     </div>
                 </div>
